# iot-operations-sdks

./: README.md  stubservice.md
.devcontainer/: onCreateCommand.sh
.github/: .linkspector.yml  CODEOWNERS
.github/actions/configure-aio/: action.yml
.github/pages/: docfx.json
.github/workflows/: ci-connector-schema.yml  ci-dotnet.yml  ci-markdown.yml  ci-rust.yml  e2e-cross-language.yml  run-codegen.yml
codegen/: codegen.sln
codegen/demo/dtdl/: CounterCollection.json
codegen/src/Azure.Iot.Operations.ProtocolCompiler/: ArgBinder.cs  Azure.Iot.Operations.ProtocolCompiler.csproj  CommandHandler.cs  CustomTypeName.cs  EnvoyGenerator.cs  ModelSelector.cs  OptionContainer.cs  Program.cs  RawTypeName.cs  Resolver.cs  SchemaWriter.cs  SchemasGenerator.cs  ThingGenerator.cs  TypeWriter.cs  TypesGenerator.cs
codegen/src/Azure.Iot.Operations.ProtocolCompilerLib/: Azure.Iot.Operations.ProtocolCompilerLib.csproj  CodeName.cs  CompositeGenerator.cs  CustomTypeName.cs  EmptyTypeName.cs  ITypeName.cs  ModelSelector.cs  RawTypeName.cs  RecursionChecker.cs  RecursionException.cs  ReservedCSharp.cs  ReservedGo.cs  ReservedRust.cs  ResourceNames.cs  TargetLanguage.cs
codegen/test/ProtocolCompiler.UnitTests/: Azure.Iot.Operations.ProtocolCompiler.UnitTests.csproj
codegen/test/samples/: README.md
doc/: README.md  akri_connector.md  components.md  setup.md
doc/akri_connector/: connector-metadata-schema.json  example-connector-metadata.json  minimal-example-connector-metadata.json
doc/dev/: packaging.md
doc/dev/adr/: 0010-cloud-event-content-type.md  0021-error-modeling-headers.md  0022-codegen-err-headers.md  0023-property-support.md  0024-indirect-schema.md  0026-wot-protocol-binding.md
doc/reference/: README.md  connection-settings.md  error-model.md  message-metadata.md  repository-structure.md  topic-structure.md
dotnet/: Azure.Iot.Operations.sln
dotnet/src/Azure.Iot.Operations.Connector/: AdrClientWrapper.cs  AdrClientWrapperProvider.cs  AioDiagnosticsLogs.cs  AioMetadata.cs  AssetAvailableEventArgs.cs  AssetChangedEventArgs.cs  BuildConfiguration.cs  (+18 more)
eng/dtdl/: SchemaRegistry-1.json  adr-base-service.json  aep-name-based-operations.json  akri-observability-metrics-operations.json  device-discovery-service.json  device-name-based-operations.json
go/: go.work
go/mqtt/: API.md  connect.go  errors.go  features.go  publish.go  session_client.go  subscribe.go
go/protocol/: API.md  command_executor.go  encoding.go  listener.go  telemetry_cloud_event.go  telemetry_sender.go  types.go
go/services/: .gomarkdoc.yml  gen.sh  go.mod
rust/: Cargo.toml  Dockerfile  README.md  release.sh
rust/azure_iot_operations_connector/: Cargo.toml  Dockerfile  README.md  ct.yaml  my-thermostat-device.yaml  rest-asset.yaml
rust/azure_iot_operations_connector/examples/: base_connector_sample.rs  connector_get_adr_definitions.rs  deployed_azure_device_registry.rs  filemount_azure_device_registry_observation.rs
rust/azure_iot_operations_connector/examples/base_connector_sample_resources/: Dockerfile  connector_template.yaml  rest-thermostat-asset-definition.yaml  thermostat-device-definition.yaml
rust/azure_iot_operations_connector/examples/connector_get_adr_definitions_resources/: Dockerfile  connector_template.yaml  rest-thermostat-asset-definition.yaml  thermostat-device-definition.yaml
rust/azure_iot_operations_connector/src/: base_connector.rs  data_processor.rs  data_transformer.rs  deployment_artifacts.rs  destination_endpoint.rs  file_mount_azure_device_registry.rs  filemount.rs  lib.rs  source_endpoint.rs
rust/azure_iot_operations_connector/src/base_connector/: adr_discovery.rs  managed_azure_device_registry.rs
rust/azure_iot_operations_connector/src/data_processor/: derived_json.rs
rust/azure_iot_operations_connector/src/deployment_artifacts/: azure_device_registry.rs  connector.rs
rust/azure_iot_operations_connector/src/filemount/: azure_device_registry.rs  connector_artifacts.rs  connector_config.rs  observability_artifacts.rs
rust/azure_iot_operations_connector/tests/: artifact_tests.rs
rust/azure_iot_operations_mqtt/: Cargo.toml
rust/azure_iot_operations_protocol/: Cargo.toml
rust/azure_iot_operations_services/: Cargo.toml  gen.sh
rust/ci/: build-deps.sh
rust/sample_applications/sample_connector_scaffolding/: Cargo.toml  Dockerfile  README.md
rust/sample_applications/sample_connector_scaffolding/src/: main.rs
rust/stub_service/: Cargo.toml  gen.sh
rust/stub_service/src/: lib.rs
rust/stub_service/src/schema_registry_gen/: dependencies.md
rust/stub_service/src/schema_registry_gen/common_types/: decimal.rs
rust/stub_service/src/schema_registry_gen/schema_registry/: get_command_executor.rs  put_command_executor.rs
samples/: README.md
tools/azure_iot_operations_stub_services/: Cargo.toml  README.md  gen.sh
tools/azure_iot_operations_stub_services/src/: lib.rs  main.rs  schema_registry.rs
tools/azure_iot_operations_stub_services/src/schema_registry/: service.rs
tools/azure_iot_operations_stub_services/src/schema_registry/schema_registry_gen/: dependencies.md  schema_registry.rs
tools/azure_iot_operations_stub_services/src/schema_registry/schema_registry_gen/common_types/: b64.rs  time_only.rs
tools/azure_iot_operations_stub_services/src/schema_registry/schema_registry_gen/schema_registry/: format.rs  get_command_executor.rs  get_request_payload.rs  get_request_payload_serialization.rs  get_request_schema_serialization.rs  get_response_payload.rs  get_response_payload_serialization.rs  get_response_schema.rs  get_response_schema_serialization.rs  put_command_executor.rs  put_request_schema.rs  put_request_schema_serialization.rs  put_response_schema.rs  put_response_schema_serialization.rs  schema_registry_error_code.rs  schema_registry_error_details.rs  schema_registry_error_serialization.rs  schema_registry_error_target.rs  schema_type.rs
tools/deployment/: initialize-cluster.sh  install-aio-arc.sh
tools/statestore-cli/: Cargo.toml  Dockerfile  readme-dev.md  readme.md
tools/stub_service/: Cargo.toml  README.md
(+1525 files in other folders)
