# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_connector"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Azure IoT Operations Connector"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
# azure_iot_operations_protocol = { version = "0.9", path = "../azure_iot_operations_protocol", registry = "aio-sdks"  }
# azure_iot_operations_services = { version = "0.8", path = "../azure_iot_operations_services", registry = "aio-sdks", features = ["state_store", "schema_registry", "azure_device_registry"]  }
# azure_iot_operations_mqtt = { version = "0.9", path = "../azure_iot_operations_mqtt", registry = "aio-sdks"  }
# derive_builder.workspace = true
# log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
# futures = "0.3"
# tokio-stream = "0.1"
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
# env_logger.workspace = true
# test-case.workspace = true
temp-env = { version = "0.3.6", features = ["async_closure"]}
tempfile.workspace = true
test-case.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
