# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_connector"
version = "0.5.0-rc"
edition = "2024"
license = "MIT"
description = "Azure IoT Operations Connector"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
azure_iot_operations_protocol = { version = "0.12.0", path = "../azure_iot_operations_protocol", registry = "aio-sdks"  }
azure_iot_operations_services = { version = "0.13.0-rc", path = "../azure_iot_operations_services", registry = "aio-sdks", features = ["state_store", "schema_registry", "azure_device_registry"]  }
azure_iot_operations_mqtt = { version = "0.11.0", path = "../azure_iot_operations_mqtt", registry = "aio-sdks"  }
azure_iot_operations_otel = { version = "0.2.1", registry = "aio-sdks" }
chrono.workspace = true
derive-getters.workspace = true
log.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
opentelemetry = { version = "0.24", features = ["metrics", "logs"]}
opentelemetry_sdk =  {version = "0.24", features = ["metrics", "logs", "rt-tokio", "logs_level_enabled"]}
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
# tokio.workspace = true
tokio = { version = "1.41", features = ["full"] } # TODO: If I use the workspace version of tokio I run into errors with tokio in the tests, will investigate later
tokio-retry2 = { version = "0.5.7", features = ["jitter"] }
tokio-util.workspace = true

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"]}
tempfile.workspace = true
test-case.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
