[package]
name = "stub_service"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_iot_operations_protocol = { version = "0.9", path = "../azure_iot_operations_protocol", registry = "aio-sdks"  }
azure_iot_operations_mqtt = { version = "0.9", path = "../azure_iot_operations_mqtt", registry = "aio-sdks"  }
derive_builder.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
data-encoding = "2.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.105"}
chrono = { version = "0.4.31", features = ["serde", "alloc"] }
iso8601-duration = { version = "0.2", features = ["serde", "chrono"] }
base64 = { version = "0.22.1" }
bigdecimal = { version = "0.4.5" }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dev-dependencies]
env_logger.workspace = true
test-case.workspace = true

[lints]
workspace = true