# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_stub_services"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_iot_operations_protocol = { version = "0.9.0", registry = "aio-sdks"  }
azure_iot_operations_mqtt = { version = "0.9.0", registry = "aio-sdks"  }
tokio = { version = "1.41", features = ["rt", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.15"
serde_repr = "0.1"
serde_json = "1.0.105"
chrono = { version = "0.4.31", features = ["serde", "alloc"] }
iso8601-duration = { version = "0.2", features = ["serde", "chrono"] }
base64 = "0.22.1"
bigdecimal = "0.4.5"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
derive_builder = "0.20"
log = "0.4.21"
log4rs = "1.3.0"
thiserror = "2.0.12"

[features]
default=["enable-output"]
enable-output=[]