# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "sample_connector_scaffolding"
version = "0.2.0"
edition = "2024"

[dependencies]
azure_iot_operations_connector = { version = "0.5.0-rc", registry = "aio-sdks"  }
azure_iot_operations_otel = { version = "0.2.1", registry = "aio-sdks" }
azure_iot_operations_protocol = { version = "0.12.0", registry = "aio-sdks"  }
log = "0.4.21"
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
